syntax = "proto3";

package cart;

service CartService {
  rpc AddToCart(AddToCartRequest) returns (CartResponse);
  rpc RemoveFromCart(RemoveFromCartRequest) returns (CartResponse);
  rpc GetCart(GetCartRequest) returns (GetCartResponse);
}

message AddToCartRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message RemoveFromCartRequest {
  string user_id = 1;
  string product_id = 2;
}

message GetCartRequest {
  string user_id = 1;
}

message GetCartResponse {
  repeated CartItem items = 1;
}

message CartItem {
  string product_id = 1;
  int32 quantity = 2;
}

message CartResponse {
  string message = 1;
  bool success = 2;
}
